finishes inital HTML for page layout and adds starter css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gavin Aldred - Portfolio</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 
   <!-- LOGO -->
   
-  <div class="logo">Gavin</div>
+  <div class="logo">Gavin Aldred</div>
   
   <!-- NAVIGATION MENU -->
   
@@ -60,15 +61,24 @@
  
   <main class="page-wrapper">
     <!-- about me -->
+    <div class="subheading"><h3>About Me</h3></div>
     <section class="page-section" id="about">
-      <h2>About Me</h2>
-      <article</article>
+      <div class="row">
+      <div class="column" style="background-color:#aaa;">
+        <h2>Column 1</h2>
+        <p>Some text..</p>
+      </div>
+      <div class="column" style="background-color:#bbb;">
+        <h2>Column 2</h2>
+        <p>Some text..</p>
+      </div>
+    </div>
     </section>
 
 
     <!-- portfolio container -->
 
-    <div class="subheading"><h3>Shop by Category</h3></div>
+    <div class="subheading"><h3>My Work</h3></div>
     <section id="categoryGrid">
 
     <div id="bookcases" class="categoryGridArea">
@@ -85,11 +95,17 @@
             </div>  
             <div id="desks" class="categoryGridArea">
               <div class="heading">Desks</div>
-    </div>
+    </div></section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+    <div class="subheading"><h3>Contact Me</h3></div>
+    <section class="page-section" id="about">
+      <div class="row">
+      <div class="column" style="background-color:#aaa;">
+        <h2>Column 1</h2>
+        <p>Some text..</p>
+      </div>
+     
     </section>
   </main>
 
@@ -105,7 +121,7 @@
 
  <!-- to do and notes
 
-  1. Decide on colour scheme
+
   2. Finish HTML structure (deploy here)
   > About me
   > Contact me
