finishes header css, adds grid images, applies media queries

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Portfolio of Gavin Aldred, showcasing HTML, CSS and Javascript.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gavin Aldred - Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/FAVICON.jpg">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
 </head>
@@ -32,15 +34,14 @@
   
   <div class="menu">
   
-  <li><a href="/">Home</a></li>
   
-  <li><a href="/">About</a></li>
+  <li><a href="#about">About</a></li>
   
-  <li><a href="/">Services</a></li>
+  <li><a href="#work">Work</a></li>
   
-  <li><a href="/">Pricing</a></li>
+  <li><a href="#contact">Contact</a></li>
   
-  <li><a href="/">Contact</a></li>
+  <li><a href="https://github.com/gavinaldred"  target="blank" >Git</a></li>
   
   </div>
   
@@ -55,14 +56,14 @@
   <!-- hero banner -->
   <section class="hero-banner">
     <div class="overlay">
-      <h2>Cool subtitle here!</h2>
+      <h2>Find out about me and my work!</h2>
     </div>
   </section>
  
   <main class="page-wrapper">
     <!-- about me -->
-    <div class="subheading"><h3>About Me</h3></div>
-    <section class="page-section" id="about">
+    <div class="subheading"><h3 id="about">About Me</h3></div>
+    <section class="page-section">
       <div class="row">
       <div class="column" style="background-color:#aaa;">
         <h2>Column 1</h2>
@@ -78,28 +79,34 @@
 
     <!-- portfolio container -->
 
-    <div class="subheading"><h3>My Work</h3></div>
+    <div class="subheading"><h3 id="work">My Work</h3></div>
     <section id="categoryGrid">
+     <a href="https://www.google.com">   
+    <div id="portfolio1" class="categoryGridArea">
+      <div class="heading"><a href="https://gavinaldred.github.io/challenge1/">Horiseon Refactor >></a></div>
+      </div></a>
 
-    <div id="bookcases" class="categoryGridArea">
-      <div class="heading">Bookcases</div>
+      <div id="portfolio2" class="categoryGridArea">
+        <div class="heading"><a href="https://gavinaldred.github.io/gavinaldred/">HTML Table Cheatsheet >></a></div>
       </div>
-      <div id="bedroom" class="categoryGridArea">
-        <div class="heading">Bedroom</div>
-      </div>
-        <div id="couches" class="categoryGridArea">
-          <div class="heading">Couches</div>
+
+        <div id="portfolio3" class="categoryGridArea">
+          <div class="heading"><a href="https://gavinaldred.github.io/flexbox-cheat-sheet/">Flexbox Cheatsheet >></a></div>
           </div>  
-          <div id="patio" class="categoryGridArea">
-            <div class="heading">Patio</div>
+
+          <div id="portfolio4" class="categoryGridArea">
+            <div class="heading"><a href="https://gavinaldred.github.io/website-design-system/ ">Website Design System >></a></div>
             </div>  
-            <div id="desks" class="categoryGridArea">
-              <div class="heading">Desks</div>
-    </div></section>
+
+            <div id="portfolio5" class="categoryGridArea">
+              <div class="heading"><a href="https://gavinaldred.github.io/prework-study-guide/">Bootcamp Pre-Work >></a></div>
+    </div>
+  
+  </section>
 
     <!-- contact -->
     <div class="subheading"><h3>Contact Me</h3></div>
-    <section class="page-section" id="about">
+    <section class="page-section" id="contact">
       <div class="row">
       <div class="column" style="background-color:#aaa;">
         <h2>Column 1</h2>
@@ -110,9 +117,9 @@
   </main>
 
   <footer class="footer">
-    <h4>Made with ❤️️ by Horiseon</h4>
+    <h4>Made with 🔥 by Gavin</h4>
     <p>
-        &copy; 2019 Horiseon Social Solution Services, Inc.
+        &copy; 2022 Gavin Aldred
     </p>
 </footer>
 </body>
@@ -122,11 +129,8 @@
  <!-- to do and notes
 
 
-  2. Finish HTML structure (deploy here)
-  > About me
-  > Contact me
-  > Footer
-  3. First deploy
+  
+
   4. images for the portfolio pieces
   6. Main CSS work
   > HEADER
@@ -144,10 +148,6 @@
   
  
 
-https://gavinaldred.github.io/website-design-system/ (need an image)
-https://gavinaldred.github.io/prework-study-guide/
-https://gavinaldred.github.io/gavinaldred/ (html table cheat sheet)
-https://gavinaldred.github.io/challenge1/ Horiseon (Refactor)
-https://gavinaldred.github.io/flexbox-cheat-sheet/ (flex-box-cheatsheet)
+
 
 -->
