finishes css, adds narrative to readme, finishes HTML

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
    </head>
    <body>
-      <!-- main logo / nav -->
+      <!-- MAIN LOGO / NAV -->
       <nav class="navbar">
          <!-- LOGO -->
          <div class="logo">Gavin Aldred..<span class="animatelogo">.</span></div>
          <!-- NAVIGATION MENU -->
          <ul class="nav-links">
-            <!-- USING CHECKBOX HACK -->
+            <!-- USING CHECKBOX HACK - SEE CSS -->
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
             <!-- NAVIGATION MENU -->
@@ -74,7 +74,7 @@
          <div class="subheading">
             <h3>Contact Me</h3>
          </div>
-         <section class="page-section" id="contact">
+         <section id="contact">
             <div class="contactcolumn">
                <p>📱 07825 985686</p>
                <p><a href="mailto:gavinaldred1@gmail.com">✉️ gavinaldred1@gmail.com</a></p>
